# robot-vision-nav-ros2

./: README.md  package.xml  setup.py
config/: base_serial.yaml  ekf.yaml  nav2_params_final.yaml  slam_toolbox.yaml
docs/: 01-architecture.md  02-workspace-integration.md  03-vision-pipeline.md  04-pointcloud-pipeline.md  05-navigation-pipeline.md  06-virtual-walls.md  07-topic-topology.md  08-launch-sequence.md  09-modification-checklist.md  10-deployment-guide.md
launch/: bringup_all.launch.py  nav2_autonomous.launch.py  navigation_only.launch.py  pointcloud_only.launch.py  slam_mapping.launch.py  vision_only.launch.py
scripts/: auto_inject_walls.py  switch_mode.py
